routes triuble with href

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,12 +41,12 @@
 
 				                  {#      <div class="dropdown-item" href="#auto">Автомобили</div> #}
 
-										<form class="dropdown-item" name='transition' method="post" action='/auto'>
+										<form class="dropdown-item" name='transition' method="post" action='auto'>
 											<input type="submit" value="Авто"  > 
 										</form>
 
 										<div class="dropdown-item" href="auto">Авто</div>
-				                        <div class="dropdown-item" href="#">Спорт</div>
+				                        <div class="dropdown-item" href="/auto">Спорт</div>
 				                        <div class="dropdown-divider"></div>
 				                        <div class="dropdown-item" href="#">Тестовые проекты</div>
 				                    </div>
