Routes started to work with <a> tag instead of <div>

--- a/public/blog/scss/blog.scss
+++ b/public/blog/scss/blog.scss
@@ -115,8 +115,9 @@ background:
     /* под градиентом, изображение */
     url(../images/03_pcb.jpg);
     background-position: 50% 20%;
-
+    cursor: pointer;
 }
+
 .blog-title {
   margin-bottom: 0;
   font-size: 2rem;
