--- a/templates/auto.html.twig
+++ b/templates/auto.html.twig
@@ -2,6 +2,8 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-	<p> Выборка статей по теме авто </p>
+	<p > Выборка статей по теме авто </p>
+	<p>{{number}}</p>
+	<p>{{article}}</p>
 {% endblock %}
 
