--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,10 +19,12 @@
     <body>
     	{% block header %}
 	        <div class="blog-header">
-	            <div class="container">
-	                <h3 class="blog-title">The Blog</h3>
-	                <p class="lead blog-description">An example blog template built with Bootstrap.</p>
-	            </div>
+	        	<a href="/">
+		            <div class="container">
+		                <h3 class="blog-title">The Blog</h3>
+		                <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+	            	</div>
+	            </a>
 	        </div>
 
 		{% endblock %}
@@ -33,18 +35,13 @@
 				        <div class=" col-xs-6"> 
 				            <div class="nav nav-tabs ">
 				                <div class="nav-item">
-				                    <div class="nav-link " href="#">Главная</div>
+				                    <a class="nav-link " href="/">Главная</a>
 				                </div>
 				                <div class="nav-item dropdown">
 				                    <div class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Рубрика</div>
 				                    <div class="dropdown-menu dropdown-menu-left">
-				                        <div class="dropdown-item" href="#">Разработка электроники</div>    
-										<form class="dropdown-item" name='transition' method="post" action='auto'>
-											<input type="submit" value="Авто"  > 
-										</form>
-
+				                        <a class="dropdown-item" href="#">Разработка электроники</a>    
 										<a class="dropdown-item" href="auto">Авто</a>
-										<a class="dropdown-item" href="{{ path('auto') }}">Авто</a>
 				                        <a class="dropdown-item" href="{{ url('auto') }}">Спорт</a>
 				                        <div class="dropdown-divider"></div>
 				                        <a class="dropdown-item" href="#">Тестовые проекты</a>
@@ -76,11 +73,11 @@
 				                <div class="nav-item dropdown " style="left: auto; right: 0;">
 				                    <div class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sign In</div>
 				                    <div class="dropdown-menu dropdown-menu-right">
-				                        <div class="dropdown-item" href="#">Action</div>
+				                        <a class="dropdown-item" href="#">Action</a>
 				                        <div class="dropdown-divider"></div>
-				                        <div class="dropdown-item" href="#">Another action</div>
-				                        <div class="dropdown-item" href="#">Something else here</div>
-				                        <div class="dropdown-item" href="#">Separated link</div>
+				                        <a class="dropdown-item" href="#">Another action</a>
+				                        <a class="dropdown-item" href="#">Something else here</a>
+				                        <a class="dropdown-item" href="#">Separated link</a>
 				                    </div>
 				                </div>
 				            </div> 
@@ -103,7 +100,7 @@
 						<div class="row">
 		                  	<div class="col-sm-8 blog-main">
 								<div class="blog-post">
-									<h2 class="blog-post-title">Another blog post</h2>
+									<h3 class="blog-post-title">Another blog post</h3>
 									<p class="blog-post-meta">December 23, 2013 by <a href="#">Jacob</a></p>
 									<p class="h-100">Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
 									<blockquote>
@@ -125,23 +122,27 @@
 									<h4>About</h4>
 									<p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
 			                    </div>
-			                    <div class="sidebar-module">
-									<h4>Archives</h4>
-										<ol class="list-unstyled">
-										<li><a href="#">March 2014</a></li>
-										<li><a href="#">February 2014</a></li>
-										<li><a href="#">January 2014</a></li>
-										<li><a href="#">December 2013</a></li>
-										<li><a href="#">November 2013</a></li>
-										<li><a href="#">October 2013</a></li>
-										<li><a href="#">September 2013</a></li>
-										<li><a href="#">August 2013</a></li>
-										<li><a href="#">July 2013</a></li>
-										<li><a href="#">June 2013</a></li>
-										<li><a href="#">May 2013</a></li>
-										<li><a href="#">April 2013</a></li>
-									</ol>
-			                    </div>
+
+			                    {%  block sidebar %}
+				                    <div class="sidebar-module">
+										<h4>Archives</h4>
+											<ol class="list-unstyled">
+											<li><a href="#">March 2014</a></li>
+											<li><a href="#">February 2014</a></li>
+											<li><a href="#">January 2014</a></li>
+											<li><a href="#">December 2013</a></li>
+											<li><a href="#">November 2013</a></li>
+											<li><a href="#">October 2013</a></li>
+											<li><a href="#">September 2013</a></li>
+											<li><a href="#">August 2013</a></li>
+											<li><a href="#">July 2013</a></li>
+											<li><a href="#">June 2013</a></li>
+											<li><a href="#">May 2013</a></li>
+											<li><a href="#">April 2013</a></li>
+										</ol>
+				                    </div>
+			                    {% endblock %}
+
 			                    <div class="sidebar-module">
 									<h4>Elsewhere</h4>
 									<ol class="list-unstyled">
