--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
 	        	<a href="/">
 		            <div class="container">
 		                <h3 class="blog-title">The Blog</h3>
-		                <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+		                <p class="lead blog-description">Blog redone with Symfony.</p>
 	            	</div>
 	            </a>
 	        </div>
